--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,17 +1,15 @@
-usuarioservice:
-  url: ${TARGET_HOST_1:http://localhost:8082}
+usuario-service:
+  url: http://localhost:8086
 app:
   api:
     version: v1
-  version: 0.11.1
+  version: 0.14.1
 eureka:
   client:
-    enable-self-preservation: true
     fetch-registry: true
-    lease-expiration-duration-in-seconds: 90
-    lease-renewal-interval-in-seconds: 5
+    lease-expiration-duration-in-seconds: 30
+    lease-renewal-interval-in-seconds: 10
     register-with-eureka: true
-    renewal-percent-threshold: 0.85
     service-url:
       defaultZone: http://${EUREKA_HOST:localhost}:${EUREKA_PORT:8761}/eureka/
   instance:
@@ -22,9 +20,10 @@ logging:
       zaxxer:
         hikari: ERROR
     org:
-      hibernate: ERROR
-      hibernate.SQL: DEBUG
-      springframework: ERROR
+      hibernate:
+        nodeValue: ERROR
+        SQL: DEBUG
+        springframework: ERROR
     root: ERROR
     web: INFO
 management:
@@ -33,9 +32,9 @@ management:
       exposure:
         include: '*'
   server:
-    port: 8081
+    port: ${ACTUATOR_PORT:8089}
 server:
-  port: ${PORT:8080}
+  port: ${PORT:8088}
 spring:
   application:
     name: Facultad-Service
@@ -43,13 +42,13 @@ spring:
     driver-class-name: org.postgresql.Driver
     hikari:
       connection-test-query: SELECT 1
-      connection-timeout: 30000
-      idle-timeout: 600000
-      keepalive-time: 300000
-      max-lifetime: 1800000
-      maximum-pool-size: 50
-      minimum-idle: 10
-      validation-timeout: 5000
+      connection-timeout: '30000'
+      idle-timeout: '600000'
+      keepalive-time: '300000'
+      max-lifetime: '1800000'
+      maximum-pool-size: '50'
+      minimum-idle: '10'
+      validation-timeout: '5000'
     password: ${DB_PASS:a1b2c3d4}
     url: ${DB_HOST:jdbc:postgresql://localhost:5432/curso_springboot}
     username: ${DB_USER:devdb}
