--- a/compose.yaml
+++ b/compose.yaml
@@ -13,11 +13,7 @@ services:
       - DB_USER=userdb
       - DB_PASS=passdb
       - JPA_DDL=create-drop
-      - DB_URL=jdbc:postgresql://db3:5433/curso_springboot
-      - EUREKA_HOST=eurekaserver
-      - EUREKA_PORT=8761
-      - PORT=8088
-      - ACTUATOR_PORT=8089
+      - DB_HOST=jdbc:postgresql://db3:5433/curso_springboot
     networks:
       - mynetwork
 
